--- a/index.html
+++ b/index.html
@@ -5,9 +5,8 @@
         </header>
         <main style="background-color:lightblue">
             <h1 style="color:navy; text-align:center;font-size:40px">Институт изучения мирового океана</h1>
-            <p style="font-size:25px;text-align:center;">На нашем сайте будут опубликованы:<br/> монографии учёных, расписание конференций, отчёты об экспедициях, <br/>планирование экологических программ и многое другое.</p>
-            <img style="opacity: 0.6" src="https://learn.algoritmika.org/uploads/2020/10/water-3194377_1920_0_1603951480.jpg" width="850px"/>
-        </main>
+            <p style="font-size:25px;text-align:center;">На нашем сайте будут опубликованы:<br/> монографии учёных, расписание конференций, отчёты об экспедициях, <br/>планирование экологических программ и многое другое. </br> <img style="opacity: 0.6;" src="https://learn.algoritmika.org/uploads/2020/10/water-3194377_1920_0_1603951480.jpg" width="850px"/> </p>
+            
         <footer style="color:navy">
             <p>Адрес: город Науки, ул.Водная, 11</p>
         </footer>
